tests/ui/fabricate_recovered_ledger.stderr
error[E0624]: associated function `from_trusted_parts` is private
 --> tests/ui/fabricate_recovered_ledger.rs:7:39
  |
7 |       let _recovered = RecoveredLedger::from_trusted_parts(ledger, 0);
  |                                         ^^^^^^^^^^^^^^^^^^ private associated function
  |
 ::: src/ledger/record.rs
  |
  | /     pub(crate) const fn from_trusted_parts(
  | |         ledger: AllocationLedger,
  | |         physical_generation: u64,
  | |     ) -> Self {
  | |_____________- private associated function defined here
